// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<div
  className="css-1p6nixt"
>
  <div
    className="header"
  >
    <Brand />
    <Navigation />
  </div>
  <div
    className="main"
  />
</div>
`;

exports[`should render children 1`] = `
<div
  className="css-1p6nixt"
>
  <div
    className="header"
  >
    <Brand />
    <Navigation />
  </div>
  <div
    className="main"
  >
    <Child />
  </div>
</div>
`;
